# hasql-generic

./: LICENSE  README.md  hasql-generic.cabal  stack.yaml
src/Hasql/Generic/: HasParams.hs  HasRow.hs
