name:                hasql-generic
version:             0.1.0
synopsis:            Generic encoder and decoder deriving for Hasql
description:         Please see README.md
homepage:            https://github.com/chris-kahn/hasql-generic#readme
license:             BSD3
license-file:        LICENSE
author:              Chris Kahn
maintainer:          chris@kahn.pro
copyright:           2016 Chris Kahn
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Hasql.Generic.HasRow
                     , Hasql.Generic.HasParams
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , binary-parser
                     , bytestring
                     , containers
                     , contravariant
                     , generics-sop
                     , hasql >= 0.19 && < 0.20
                     , postgresql-binary
                     , scientific
                     , text
                     , time
                     , uuid
                     , vector
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/chris-kahn/hasql-generic
